Fixing the default blog spacing and search result spacing.

--- a/assets/css/scss/lsx-blog-customizer.scss
+++ b/assets/css/scss/lsx-blog-customizer.scss
@@ -648,7 +648,7 @@
 	&.archive {
 		#categories-slider {
 			+ .post-wrapper {
-				margin-top: -3.3rem;
+				margin-top: 6.3rem;
 			}
 		}
 	}
@@ -757,7 +757,7 @@
 	&.search-results {
 		#categories-slider {
 			+ .post-wrapper {
-				margin-top: -6.3rem;
+				margin-top: 6.3rem;
 			}
 		}
 		.post-wrapper {
